--- a/jQuert-Assignment-1/index.html
+++ b/jQuert-Assignment-1/index.html
@@ -13,42 +13,42 @@
 <body>
     <div class="card">
         <div class="cards">
-            <img src="./Images/swiz.jpg" alt="swizerland" id="img1">
+            <img src="./Images/swiz.jpg" alt="swizerland" >
             <h2>Swizerland</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
             <button class="delete">Delete</button>
         </div>
         <div class="cards">
-            <img src="./Images/Canda.jpg" alt="Canda" id="img2">
+            <img src="./Images/Canda.jpg" alt="Canda" >
             <h2>Canda</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
             <button class="delete">Delete</button>
         </div>
         <div class="cards">
-            <img src="./Images/fin.jpg" alt="Finland" id="img3">
+            <img src="./Images/fin.jpg" alt="Finland" >
             <h2>Finland</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
             <button class="delete">Delete</button>
         </div>
         <div class="cards">
-            <img src="./Images/Iceland.jpg" alt="Iceland" id="img4">
+            <img src="./Images/Iceland.jpg" alt="Iceland">
             <h2>Iceland</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
             <button class="delete">Delete</button>
         </div>
         <div class="cards">
-            <img src="./Images/Russia.jpg" alt="Russia" id="img5">
+            <img src="./Images/Russia.jpg" alt="Russia">
             <h2>Russia</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
             <button class="delete">Delete</button>
         </div>
         <div class="cards">
-            <img src="./Images/Kerala.jpg" alt="Kerala" id="img6">
+            <img src="./Images/Kerala.jpg" alt="Kerala">
             <h2>Kerala</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.mquam assumenda error ut sit est nulla odit
                 laboriosam quo accusamu</p>
